update set cookie

--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,8 @@
   <h1>【ログイン】名前を入力してください</h1>
 
   <form method="POST">
-    名前: <input name="username" type="text">
+    名前: <input name="username" type="text"> <br>
+    メールアドレス: <input name="email" type="email"> <br>
 
     <input type="submit" value="送信">
   </form>
